k8s-helm/templates/deployment-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: oussamaelamraoui/kubernetes-django:v0.2
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: staticfiles
          mountPath: /app/staticfiles
      volumes:
      - name: staticfiles
        emptyDir: {}
