k8s-helm/templates/service-django.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: django-app
spec:
  selector:
    app: django
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
