k8s-helm/templates/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: django-app
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
